--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.4"
-  }
-}
+  },
+    "type": "module"
+  } 
+  
+
