--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A minimum viable product for a tourism accessibility application.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.cjs",
+    "build": "webpack --config webpack.config.cjs",
     "test": "echo \"No tests specified\" && exit 1",
     "lint": "eslint ."
   },
