--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
+    "@types/google.maps": "^3.55.12",
     "babel-loader": "^8.3.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.0.0",
@@ -37,7 +38,5 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.4"
   },
-    "type": "module"
-  } 
-  
-
+  "type": "module"
+}
